fix: align all food cards on row

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -66,7 +66,6 @@ body {
 .cards {
   display: flex;
   justify-content: center;
-  align-items: center;
   width: 100%;
   max-width: 1200px;
 }
